# overtone-news-mcp

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
references/: ad-preferences.md
scripts/: news.sh
src/overtone_news_mcp/: server.py
